--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Jackson Hibernate module - handle lazy proxy serialization -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-hibernate6</artifactId>
+		</dependency>
+
 		<!-- Lombok (reduce boilerplate code) -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
